@@ -46,3 +46,5 @@
 < ---- ABOVE Released NOVEMBER 1, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Nov-1-2021 ---- >
 - Removed halloween decorations
 - Alkharid Upstairs locations can now be entered exited correctly
+- Fix Yak Hide Armor crafting level requirements
+- Spiky Vambraces crafing added
